--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sensorDataTable",
   "description": "Minimum Setup of Angular Application with Gulp",
   "version": "0.0.1",
-  "author": "khazi afzal",
+  "author": "Kunal Dandawate",
   "license": "PRIVATE",
   "main": "index.js",
   "devDependencies": {
@@ -14,9 +14,5 @@
   },
   "dependencies": {
     "angular": "^1.5.0-beta.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:khaziwallis/sensorDataTable.git"
   }
 }
